Correct table column alignment that is incorrect on Firefox. Bug https://bugzilla.redhat.com/show_bug.cgi?id=1854653

--- a/frontend/public/style/_overrides.scss
+++ b/frontend/public/style/_overrides.scss
@@ -407,6 +407,7 @@ h6 {
 }
 
 .pf-c-table__action {
+  max-width: 44px !important;
   padding: 8px 0 !important;
   width: 44px !important;
 }
